fix: add calendar border, align icons

--- a/packages/default/styles/calendar/_layout.scss
+++ b/packages/default/styles/calendar/_layout.scss
@@ -9,6 +9,8 @@
     display: inline-block;
     width: 16.917em;
     overflow: hidden;
+    border-width: 1px;
+    border-style: solid;
 
     td,
     .link {
