--- a/packages/default/styles/icons/main.scss
+++ b/packages/default/styles/icons/main.scss
@@ -24,7 +24,7 @@
     text-transform: none;
 
     &:before {
-        vertical-align: inherit;
+        vertical-align: baseline;
     }
 }
 
